fixbug: white space between header-action

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,7 +113,7 @@ a {
   display: flex;
 }
 
-.action__login,
+.header-action__login,
 .navbar__link {
   padding: 4px 21px; /* 4px để tăng phạm vi bấm */
   font-size: 1.6rem;
@@ -139,7 +139,16 @@ a {
   background: #fff;
 }
 
-.action__signup {
+.header-action {
+  display: flex;
+  align-items: center;
+}
+
+.header-action__login {
+  margin-right: 7px;
+}
+
+.header-action__signup {
   --height: 44px;
   min-width: 104px;
 }
